# sk_network

./: .gitignore  CLAUDE.md  pyproject.toml  start.sh
03.sql/: pyproject.toml
03.sql/01_테이블생성및조회/: 01_테이블생성및조회.sql
03.sql/02_SELECT,WHERE.sql/: 02_SELECT,WHERE.sql  Table01_melon_chart.sql
03.sql/03_ORDER_BY/: 03_ORDER_BY.sql
03.sql/04_와일드카드/: 04_와일드카드.sql
03.sql/05_GROUP_BY/: 05_GROUP_BY.sql  Table02_employee.sql  Table03_employee2.sql
03.sql/06_CASE/: 06_CASE.sql
03.sql/07_JOIN/: 07_JOIN.sql
03.sql/08_UNION/: 08_UNION.sql
03.sql/09_SUBQUERY/: 09_SUBQUERY.sql
03.sql/10_날짜관련함수/: 10_날짜관련함수.sql
03.sql/11_문자열관련함수/: 11_문자열관련함수.sql
03.sql/12_데이터유형/: 12_데이터유형.sql
03.sql/50_실습_1/: 02.실습답안.sql  실습01_캠핑장.sql
03.sql/51_실습_1/: SQL실습_캠핑장.txt  문화_일반야영장업.csv
03.sql/52_실습_2/: 실습02_캠핑장.sql
03.sql/53_실습_3/: 03.실습답안.sql
03.sql/54_실습_4/: 04.실습답안.sql
03.sql/55_실습_5/: 실습05_캠핑장_시각화.ipynb
03.sql/57_실습_7/: 실습07.sql  실습07_고객_충성도_분석.ipynb
03.sql/58_실습_8/: 실습08.sql  실습08_가장_잘_팔리는_제품.ipynb
03.sql/60_sql_python/: main.py  pyproject.toml  실습06.sql  실습06_VIP_고객_식별.ipynb  실습08_가장_잘_팔리는_제품.ipynb  실습09_제품_카테고리별_매출.ipynb
03.sql/60_실습_10/: 실습10_고객_세분화_및_타겟_마케팅.ipynb
03.sql/61_실습_11/: 실습11_시즌별_판매_분석.ipynb
03.sql/90_실습/: 01.실습.sql  01.실습답안.sql  문화_일반야영장업.csv
03.sql/95_강의자료/: 02_데이터베이스 소개_노션링크.txt  06_데이터베이스 설계_노션링크.txt  07_데이터베이스 정규화_노션링크.txt
03.sql/96_실습자료/: 실습06_VIP_고객_식별.ipynb  실습07_고객_충성도_분석(튜터용).ipynb  실습09_제품_카테고리별_매출(튜터용).ipynb  실습09_제품_카테고리별_매출.ipynb  실습10_고객_세분화_및_타겟_마케팅(튜터용).ipynb
03.sql/97_강의스크립트/: 01_테이블생성및조회.spl  04_와일드카드로_문자열_조회.sql  06_CASE.sql  09_서브쿼리.sql  10_날짜관련함수.sql  11_문자열관련함수.sql
03.sql/98_테이블/: Table04_Squid_Game.sql
04.data_collection/: pyproject.toml
04.data_collection/01_open_api_seoul/: 01_데이터수집_OpenAPI활용(서울공공데이터).ipynb
04.data_collection/02_open_api_kor/: 02_데이터수집_OpenAPI활용(공공데이터포털).ipynb
04.data_collection/03_open_api_naver/: 03_데이터수집_OenAPI활용(네이버).ipynb  blog_results.csv
04.data_collection/04_html/: 04_html.ipynb
04.data_collection/05_web_scraping/: 05_Web_Scraping.ipynb
04.data_collection/06_beautifulsoup_1/: 06_도서_베스트셀러_리스트_출력하기.py
04.data_collection/08_비동기방식/: 08_비동기방식으로_정보가_보여지는_페이지.py
06.data_processing/: pyproject.toml
(+426 files in other folders)
