[project]
name = "crawling"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "folium>=0.20.0",
    "google-play-scraper>=1.2.7",
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "python-dotenv>=1.2.2",
    "selenium>=4.43.0",
    "xmltodict>=1.0.4",
    "youtube-comment-downloader>=0.1.78",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
]
